--- a/ssh_user.yml
+++ b/ssh_user.yml
@@ -1,7 +1,7 @@
 ---
 #创建用户配置ssh使之密钥登陆
-#ansible-playbook ssh_user.yml --user root --ask-pass
-- hosts: local
+#ansible-playbook ssh_user.yml --user ubuntu --ask-pass -s -U root --ask-sudo-pass
+- hosts: add_user
   vars:
     - remote_password: oye
     - key_pub: /Users/sdhou/.ssh/id_rsa.pub
